--- a/dmarket.bib
+++ b/dmarket.bib
@@ -6,8 +6,49 @@
 
 
 %% Saved with string encoding Unicode (UTF-8) 
+@inproceedings{frongillo2015convergence,
+  title={Convergence analysis of prediction markets via randomized subspace descent},
+  author={Frongillo, Rafael and Reid, Mark D},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={3034--3042},
+  year={2015}
+}
 
+@inproceedings{hu2014multi,
+  title={Multi-period Trading Prediction Markets with Connections to Machine Learning.},
+  author={Hu, Jinli and Storkey, Amos J and others},
+  booktitle={ICML},
+  pages={1773--1781},
+  year={2014}
+}
 
+@inproceedings{frongillo2012interpreting,
+  title={Interpreting prediction markets: a stochastic approach},
+  author={Frongillo, Rafael M and Della Penna, Nichol{\'a}s and Reid, Mark D},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={3266--3274},
+  year={2012}
+}
+
+@article{abernethy2013efficient,
+  title={Efficient market making via convex optimization, and a connection to online learning},
+  author={Abernethy, Jacob and Chen, Yiling and Vaughan, Jennifer Wortman},
+  journal={ACM Transactions on Economics and Computation},
+  volume={1},
+  number={2},
+  pages={12},
+  year={2013},
+  publisher={ACM}
+}
+
+@inproceedings{chen2010new,
+  title={A new understanding of prediction markets via no-regret learning},
+  author={Chen, Yiling and Vaughan, Jennifer Wortman},
+  booktitle={Proceedings of the 11th ACM conference on Electronic commerce},
+  pages={189--198},
+  year={2010},
+  organization={ACM}
+}
 
 @article{savage1971elicitation,
 	Author = {Savage, Leonard J},
