--- a/defs.tex
+++ b/defs.tex
@@ -110,7 +110,7 @@ showonlyrefs=true % or false in draft mode
 \newtheorem{algol}{Algorithm}
 \newtheorem{assn}{Assumption}
 \newtheorem{claim}[thm]{Claim}
-\newtheorem{mech}[thm]{Mechanism}
+\newtheorem{mech}{Mechanism}
 \newtheorem{rem}{Remark}
 \newtheorem{eg}{Example}
 \newtheorem{con}{Conjecture}
