--- a/market.tex
+++ b/market.tex
@@ -165,11 +165,10 @@ This is inmidiate from how the payment rule and useless experts are defined, sin
 	A Bayes Nash Equilibrium exists where all experts truthfully report their signals.
 \end{defn}
 
-There is a  equilibrium where all experts maximize their payment by maximizing the probability that the action with the highest reward is taken; if all other reports are truthful and under a no defiers assumption then this is optimized by being truthful.
+There is an equilibrium where all experts maximize their payment by maximizing the probability that the action with the highest reward is taken; if all other reports are truthful, and under a no-defiers assumption, then this is optimized by being truthful.
 
 \begin{proof}
-For a given expert $i$ let all other experts report truthfully, then substituing in the true signals into the reports the expert faces 
-
+For a given expert $i$ let all other experts report truthfully. Then, substituting the true signals into the reports the expert faces yields
 
 \[
     \pi_i = 
@@ -178,8 +177,7 @@ For a given expert $i$ let all other experts report truthfully, then substituing
     0,              & \text{otherwise}
 \end{cases}
 \]
-
-thus the only thing his report will affect in his payment is $r(a)$ via the choice of $a$, given all other experts are truthful then by construction if he is truthful this will select the $a$ that maximizes $r$. Thus truthfulness is a BNE.
+Thus, the only thing his report will affect in his payment is $r(a)$ via the choice of $a$, given all other experts are truthful then by construction if he is truthful this will select the $a$ that maximizes $r$. Thus truthfulness is a BNE.
 
 \end{proof}
 
