--- a/market.tex
+++ b/market.tex
@@ -184,12 +184,14 @@ Payments can be more than the improvement in the reward the mechanism creates.
 
 \section{Scaling Payments and Rational Entry}
 
-As presented the VCG style direct mechanism can have higher payments than the benefits it provides in terms of higher rewards (if there are states of the world with sufficiently high reward differentials and a sufficiently large number of experts with complementary signals). Thus the subject might be better off not participating a priori. Here we introduce a variation on the mechanism that re-scales payments using the prior so a subject a priori wishes to parcitipate in the mechanism. The trick is that to set $\alpha$ prior to receiving signals from experts based on the prior \emph{and} that the experts don't care about the chosen action beyond how it affects their payments. The latter is not the case in standard VCG mechanisms: if they cared about the eaction then you need to compensating them exactly for their extenrality. While this doesn't make an explciit appearance on the proof it is the reason why we can scale the payments to alter the budget in a way that VCG mechanisms can't, a change in the allocation that leaves payments unchanged alters the utility of agents in the VCG setting but not here, so the payments in the VCG setting have to move to counter balance this precisely, limiting the freedom with which we can choose them.
+As presented the VCG style direct mechanism can have higher payments than the benefits it provides in terms of higher rewards (if there are states of the world with sufficiently high reward differentials and a sufficiently large number of experts with complementary signals). Hence, the subject might be better off not participating \emph{a priori}. Here we introduce a variation on the mechanism that re-scales payments using the prior so a subject \emph{a priori} wishes to participate in the mechanism. The mechanism takes advantage of two observations. Firstly, one can set $\alpha$ prior to receiving signals from experts based on the prior. Secondly, by Lemma~\ref{lem:affect} experts do not care about the chosen action beyond how it affects their payments. 
+
+The second observation does not hold in standard VCG mechanisms: if they cared about the action then you need to compensate them exactly for their externality. While this doesn't make an explicit appearance in the proof it is the reason why we can scale the payments to alter the budget in a way that VCG mechanisms cannot: a change in the allocation that leaves payments unchanged alters the utility of agents in the VCG setting but not here, so the payments in the VCG setting have to move to counter-balance this precisely, limiting the freedom with which we can choose them.
 
 \NDP{Explain relation to the  Clarke pivot rule. With the Clarke pivot rule, the total amount paid by the player is: (social welfare of others if i were absent) - (social welfare of others when i is present).
 This is exactly the externality of player  i}
 
-In the model we have presented a expert pays no cost of aquiring their signals, and so in the single agent case the payment for their signals can in principle be arbitrarily close to zero while incentivising truthful reports (for example the share fo the reward mechanisms achieves this). We now study when payments rules can be scaled to create ex-ante in expectation arbitrarily small expected payments to the experts. As usual, this assumes risk neutral expers. 
+In the model we have presented a expert pays no cost when aquiring their signals, and so in the single agent case the payment made by the subject for signals can in principle be arbitrarily close to zero while still incentivising truthful reports (for example the share of the reward mechanisms achieves this). We now study when payments rules can be scaled to create ex-ante in expectation arbitrarily small expected payments to the experts. As usual, we assume risk neutral experts. 
 
 
 
